# nightstation-verify

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  lib.rs  main.rs
src/app/: commands.rs  event_handler.rs  models.rs  services.rs
src/app/commands/: ckey.rs  config.rs  help.rs  verification.rs  whitelist.rs
src/app/services/: ckey.rs  config.rs  verification.rs  whitelist.rs
src/config/: wizard.rs
src/config/wizard/: check_application.rs  get_login.rs  get_questions.rs  get_whitelist_path.rs  select_active_guild.rs  select_role.rs  select_text_channel.rs
